[gd_scene load_steps=5 format=3 uid="uid://vb124qmmqj7n"]

[ext_resource type="Script" uid="uid://vlijvdipfst5" path="res://tutu.gd" id="1_045ue"]
[ext_resource type="PackedScene" uid="uid://cq6ka7fo7gmkk" path="res://Button.blend" id="1_mofrj"]

[sub_resource type="BoxShape3D" id="BoxShape3D_045ue"]
size = Vector3(4, 2, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_es6my"]
size = Vector3(5, 2, 2)

[node name="bouton" type="Node3D"]
script = ExtResource("1_045ue")

[node name="Button2" parent="." instance=ExtResource("1_mofrj")]

[node name="On" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.97100925, 0.23904191, 0, -0.23904191, 0.97100925, 0, 0.19680256, 0)
constant_linear_velocity = Vector3(5, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="On"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.0709773, 1.0620035)
shape = SubResource("BoxShape3D_045ue")

[node name="Off" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.9401693, -0.34070778, 0, 0.34070778, 0.9401693, 0, 0.40475565, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Off"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.1333537, -1.0657136)
shape = SubResource("BoxShape3D_es6my")

[connection signal="button_toggled" from="." to="." method="_on_button_toggled"]
